@@ -1,3 +1,11 @@
+Thu Oct 25 09:27:15 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * bin/tao_orb_tests.lst:
+          Added Bug_3080
+
+        * bin/copy-script.sh:
+          Added copy-script which is used during the release process
+
 Thu Oct 25 08:36:15 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/Thread_Creation_Threshold_Test.cpp:
